Fix layout bug when showing error

--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
             <p class="subheading">Subscribe and get notified</p>
           </div>
           <form class="input-group">
-            <input
-              class="email"
-              type="tect"
-              name="email"
-              placeholder="Your email address ..."
-            />
-            <small class="message"></small>
+            <div class="email-field">
+              <input
+                class="email"
+                type="tect"
+                name="email"
+                placeholder="Your email address ..."
+              />
+              <small class="message"></small>
+            </div>
             <button class="btn" type="submit">Notify Me</button>
           </form>
         </nav>
